# VidToGif

./: MANIFEST.in  README.md  README_CN.md  pyproject.toml  upload_pypi.bat  upload_pypi.sh
vidtogif/: __init__.py  __main__.py  cli.py  converter.py  gui.py
